Working sample for data prep notebook

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('results/cudnn/float.out', delim_whitespace=True)\n",
+    "df = pd.read_csv('results/cudnn/test_input', delim_whitespace=True)\n",
     "df"
    ]
   },
@@ -115,7 +115,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "0.9344911124658086"
+      "text/plain": "0.9294417141289346"
      },
      "execution_count": 14,
      "metadata": {},
