--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,15 +16,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "        w    h    c   n   k  f_w  f_h  pad_w  pad_h  stride_w  stride_h  \\\n0      16   16    1   1   1    2    2      1      1         1         1   \n1      16   16    1   1   2    2    2      1      1         1         1   \n2      16   16    1   1   4    2    2      1      1         1         1   \n3      16   16    1   1   8    2    2      1      1         1         1   \n4      16   16    1   1  16    2    2      1      1         1         1   \n...   ...  ...  ...  ..  ..  ...  ...    ...    ...       ...       ...   \n1886  512  512  256  16   8    2    2      1      1         1         1   \n1887  512  512  256  16  16    2    2      1      1         1         1   \n1888  512  512  256  16  32    2    2      1      1         1         1   \n1889  512  512  256  16  64    2    2      1      1         1         1   \n1890    1    1    1   1   1    1    1      1      1         1         1   \n\n     precision  fwd_time(usec)               fwd_algo  \n0        float               6                   GEMM  \n1        float               6                   GEMM  \n2        float               6  IMPLICIT_PRECOMP_GEMM  \n3        float               6                   GEMM  \n4        float               6                   GEMM  \n...        ...             ...                    ...  \n1886     float           35411  IMPLICIT_PRECOMP_GEMM  \n1887     float           36332  IMPLICIT_PRECOMP_GEMM  \n1888     float           39693  IMPLICIT_PRECOMP_GEMM  \n1889     float           70002  IMPLICIT_PRECOMP_GEMM  \n1890     float               6  IMPLICIT_PRECOMP_GEMM  \n\n[1891 rows x 14 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>w</th>\n      <th>h</th>\n      <th>c</th>\n      <th>n</th>\n      <th>k</th>\n      <th>f_w</th>\n      <th>f_h</th>\n      <th>pad_w</th>\n      <th>pad_h</th>\n      <th>stride_w</th>\n      <th>stride_h</th>\n      <th>precision</th>\n      <th>fwd_time(usec)</th>\n      <th>fwd_algo</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>16</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>6</td>\n      <td>GEMM</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>16</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>6</td>\n      <td>GEMM</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>16</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>6</td>\n      <td>IMPLICIT_PRECOMP_GEMM</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>16</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>8</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>6</td>\n      <td>GEMM</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>16</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>16</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>6</td>\n      <td>GEMM</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1886</th>\n      <td>512</td>\n      <td>512</td>\n      <td>256</td>\n      <td>16</td>\n      <td>8</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>35411</td>\n      <td>IMPLICIT_PRECOMP_GEMM</td>\n    </tr>\n    <tr>\n      <th>1887</th>\n      <td>512</td>\n      <td>512</td>\n      <td>256</td>\n      <td>16</td>\n      <td>16</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>36332</td>\n      <td>IMPLICIT_PRECOMP_GEMM</td>\n    </tr>\n    <tr>\n      <th>1888</th>\n      <td>512</td>\n      <td>512</td>\n      <td>256</td>\n      <td>16</td>\n      <td>32</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>39693</td>\n      <td>IMPLICIT_PRECOMP_GEMM</td>\n    </tr>\n    <tr>\n      <th>1889</th>\n      <td>512</td>\n      <td>512</td>\n      <td>256</td>\n      <td>16</td>\n      <td>64</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>70002</td>\n      <td>IMPLICIT_PRECOMP_GEMM</td>\n    </tr>\n    <tr>\n      <th>1890</th>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>float</td>\n      <td>6</td>\n      <td>IMPLICIT_PRECOMP_GEMM</td>\n    </tr>\n  </tbody>\n</table>\n<p>1891 rows × 14 columns</p>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>w</th>\n",
+       "      <th>h</th>\n",
+       "      <th>c</th>\n",
+       "      <th>n</th>\n",
+       "      <th>k</th>\n",
+       "      <th>f_w</th>\n",
+       "      <th>f_h</th>\n",
+       "      <th>pad_w</th>\n",
+       "      <th>pad_h</th>\n",
+       "      <th>stride_w</th>\n",
+       "      <th>stride_h</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>fwd_time(usec)</th>\n",
+       "      <th>fwd_algo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>6</td>\n",
+       "      <td>GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>6</td>\n",
+       "      <td>GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>6</td>\n",
+       "      <td>IMPLICIT_PRECOMP_GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>6</td>\n",
+       "      <td>GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>6</td>\n",
+       "      <td>GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1886</th>\n",
+       "      <td>512</td>\n",
+       "      <td>512</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>35411</td>\n",
+       "      <td>IMPLICIT_PRECOMP_GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1887</th>\n",
+       "      <td>512</td>\n",
+       "      <td>512</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>36332</td>\n",
+       "      <td>IMPLICIT_PRECOMP_GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1888</th>\n",
+       "      <td>512</td>\n",
+       "      <td>512</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>39693</td>\n",
+       "      <td>IMPLICIT_PRECOMP_GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1889</th>\n",
+       "      <td>512</td>\n",
+       "      <td>512</td>\n",
+       "      <td>256</td>\n",
+       "      <td>16</td>\n",
+       "      <td>64</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>70002</td>\n",
+       "      <td>IMPLICIT_PRECOMP_GEMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1890</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>float</td>\n",
+       "      <td>6</td>\n",
+       "      <td>IMPLICIT_PRECOMP_GEMM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1891 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        w    h    c   n   k  f_w  f_h  pad_w  pad_h  stride_w  stride_h  \\\n",
+       "0      16   16    1   1   1    2    2      1      1         1         1   \n",
+       "1      16   16    1   1   2    2    2      1      1         1         1   \n",
+       "2      16   16    1   1   4    2    2      1      1         1         1   \n",
+       "3      16   16    1   1   8    2    2      1      1         1         1   \n",
+       "4      16   16    1   1  16    2    2      1      1         1         1   \n",
+       "...   ...  ...  ...  ..  ..  ...  ...    ...    ...       ...       ...   \n",
+       "1886  512  512  256  16   8    2    2      1      1         1         1   \n",
+       "1887  512  512  256  16  16    2    2      1      1         1         1   \n",
+       "1888  512  512  256  16  32    2    2      1      1         1         1   \n",
+       "1889  512  512  256  16  64    2    2      1      1         1         1   \n",
+       "1890    1    1    1   1   1    1    1      1      1         1         1   \n",
+       "\n",
+       "     precision  fwd_time(usec)               fwd_algo  \n",
+       "0        float               6                   GEMM  \n",
+       "1        float               6                   GEMM  \n",
+       "2        float               6  IMPLICIT_PRECOMP_GEMM  \n",
+       "3        float               6                   GEMM  \n",
+       "4        float               6                   GEMM  \n",
+       "...        ...             ...                    ...  \n",
+       "1886     float           35411  IMPLICIT_PRECOMP_GEMM  \n",
+       "1887     float           36332  IMPLICIT_PRECOMP_GEMM  \n",
+       "1888     float           39693  IMPLICIT_PRECOMP_GEMM  \n",
+       "1889     float           70002  IMPLICIT_PRECOMP_GEMM  \n",
+       "1890     float               6  IMPLICIT_PRECOMP_GEMM  \n",
+       "\n",
+       "[1891 rows x 14 columns]"
+      ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +291,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "X = df.drop(columns=['fwd_time(usec)'])\n",
@@ -44,105 +304,100 @@
     "\n",
     "precision = pd.get_dummies(X.precision)\n",
     "fwd_algo = pd.get_dummies(X.fwd_algo)\n",
+    "\n",
+    "# Precision is currently always the same, so adding it is not useful\n",
+    "#precision_cat = OneHotEncoder().fit_transform(df[\"precision\"].to_numpy().reshape(-1,1)).toarray()\n",
+    "\n",
+    "algo_cat = OneHotEncoder().fit_transform(df[\"fwd_algo\"].to_numpy().reshape(-1,1)).toarray()\n",
+    "\n",
     "X.drop(columns=['precision', 'fwd_algo'], inplace=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ss = StandardScaler()\n",
     "X = ss.fit_transform(X)\n",
+    "X = np.hstack((X, algo_cat))\n",
+    "\n",
     "y = ss.fit_transform(np.array(y).reshape(-1,1))\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/rob/PycharmProjects/cudnn_performance_model/venv/lib/python3.8/site-packages/sklearn/utils/validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "/home/insom/anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  return f(*args, **kwargs)\n",
-      "/Users/rob/PycharmProjects/cudnn_performance_model/venv/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:614: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "/home/insom/anaconda3/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:614: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "clf = MLPRegressor().fit(X_train, y_train)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 101,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "score = clf.score(X_test, y_test)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 102,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "0.9294417141289346"
+      "text/plain": [
+       "0.9619358031077146"
+      ]
      },
-     "execution_count": 14,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "score"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   "source": []
   }
  ],
  "metadata": {
@@ -161,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
