Sorted ensemble method importance values.

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
@@ -657,15 +657,15 @@
     },
     {
      "data": {
-      "text/plain": "Index(['w', 'h', 'c', 'n', 'k', 'f_w', 'f_h', 'pad_w', 'pad_h', 'stride_w',\n       'stride_h', 'global_mem_bytes', 'cuda_cores', 'float', 'half', 'FFT',\n       'WINOGRAD_NONFUSED'],\n      dtype='object')"
+      "text/plain": "Index(['c', 'n', 'w', 'stride_h', 'stride_w', 'h', 'k', 'half', 'f_h', 'f_w',\n       'pad_w', 'float', 'WINOGRAD_NONFUSED', 'cuda_cores', 'pad_h',\n       'global_mem_bytes', 'FFT'],\n      dtype='object')"
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "importances = pd.Series(random_forest_result.importances_mean)\n",
+    "importances = pd.Series(random_forest_result.importances_mean).sort_values(ascending=False)\n",
     "idx = importances[importances > 0.003].index\n",
     "print('Most \"important\" columns in dataset: ')\n",
     "df.columns[idx]"
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -804,15 +804,15 @@
     },
     {
      "data": {
-      "text/plain": "Index(['w', 'h', 'c', 'n', 'k', 'f_w', 'f_h', 'pad_h', 'stride_w', 'stride_h',\n       'mem_bus_width', 'l2_cache_size', 'kernel_runtime_limit',\n       'managed_memory', 'float', 'half', 'WINOGRAD_NONFUSED', '\"7.0\"'],\n      dtype='object')"
+      "text/plain": "Index(['c', 'n', 'w', 'stride_w', 'stride_h', 'h', 'k', 'half', 'f_w', 'f_h',\n       'pad_h', 'kernel_runtime_limit', 'WINOGRAD_NONFUSED', 'float',\n       'managed_memory', '\"7.0\"', 'l2_cache_size', 'mem_bus_width'],\n      dtype='object')"
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "importances = pd.Series(decision_tree_results.importances_mean)\n",
+    "importances = pd.Series(decision_tree_results.importances_mean).sort_values(ascending=False)\n",
     "idx = importances[importances > 0.003].index\n",
     "print('Most \"important\" columns in dataset: ')\n",
     "df.columns[idx]"
@@ -826,8 +826,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
+   "execution_count": 35,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2     0.795918\n3     0.761471\n0     0.742350\n9     0.365624\n10    0.325168\n1     0.298911\n4     0.236420\n23    0.173065\n5     0.121163\n6     0.040016\n8     0.027988\n20    0.025578\n31    0.012307\n22    0.011026\n21    0.006074\n33    0.005619\n18    0.004701\n17    0.004319\ndtype: float64"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [],
    "metadata": {
     "collapsed": false,
@@ -838,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "outputs": [],
    "source": [],
    "metadata": {
